--- a/src/проект.html
+++ b/src/проект.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    
+    <meta name="description" content="Это моя первая страница...">
+    <meta name="author" content="Andrey">
+    <meta name="robots" content="all">
+    <meta property="og:title" content="Это моя первая  страница...">
     <title>Андрей Браун - Веб-разработчик</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
    <header>
        <nav>
            <div class="logo">Андрей Браун</div>
-           <div class="menu"><ul>
+           <div class="menu">
+              <ul>
                <li>Обо мне</li>
                <li>Услуги</li>
                <li>Кейсы</li>
@@ -30,44 +34,47 @@
    </div></div>
    <br>
    <br>
+   <br>
     <div class="about_me">
+       <div class="about_me_conteiner">
         <h2>ОБО МНЕ</h2>
-      <div class="logo">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.</div> 
-      <br>
-      <div class="logo">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.</div>
-      <br>
-      <br>
+        <hr>
+        <img src="img/%D0%9F%D0%B0%D1%80%D0%B5%D0%BD%D1%8C%20mini.png" alt="">
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+      <p class="p2">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
       <input type="submit" value="Скачть резюме">
+      </div>
     </div>
     <br>
     <div class="skills">
-        <h2>ЧТО Я УМЕЮ</h2>
-          <img src="..." alt="">
+           <h2>ЧТО Я УМЕЮ</h2>
            <div class="skills_item">
+           <img src="img/laptop.png" alt="">
             <h4>Веб-дизайн</h4>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
            </div>
            <div class="skills_item">
-              <img src="..." alt="">
+              <img src="img/develop.png" alt="">
             <h4>Разработка</h4>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis,</p>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
           </div>
            <div class="skills_item">
-              <img src="..." alt="">
+              <img src="img/rocket.png" alt="">
                <h4>СЕО-Оптимизация</h4>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
            </div>
            <div class="skills_item">
-              <img src="..." alt="">
+              <img src="img/megaphone.png" alt="">
             <h4>Маркейтинг</h4>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
-        </div>
-    </div>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
+             </div>
+           </div>
+        <div class="clear"></div>
     <br>
     <div class="cases">
         <h2>КЕЙСЫ</h2>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor</p>
-        <img src="..." alt="">
+        <img src="img/%D0%BA%D0%B5%D0%B9%D1%81%D1%8B.png" alt="">
         <span>
             <h3>CLIENT</h3>
             <p>Какая-то компания</p>
@@ -85,14 +92,13 @@
         <h2>Расчет стоимости</h2>
         <br>
         <h3>ТИП САЙТА</h3>
-        <input type="text" name="taxt_input" value="" placeholder="Выберите пункт...">
+        <selet type="text" name="taxt_input" value="" placeholder="Выберите пункт...">
         <h3>ДИЗАЙН</h3>
-        <input type="text" name="taxt_input" value="" placeholder="Выберите пункт...">
+        <selet type="text" name="taxt_input" value="" placeholder="Выберите пункт...">
         <h3>АДАПТИВНОСТЬ</h3>
-        <input type="text" name="taxt_input" value="" placeholder="Выберите пункт...">
+        <selet type="text" name="taxt_input" value="" placeholder="Выберите пункт...">
         <p>Сроки                               0</p>
         <p>Стоимость                           0</p>
-    </div>
     <div class="statistics">
         <h2>НЕМНОГО СТАТИСТИКИ</h2>
        <div>
@@ -143,7 +149,7 @@
         <input type="text" name="text_input" value="" placeholder="Email">
      <div>
         <br>
-        <br><textarea name="namel" id="1" cols="30" rows="10">
+        <br><textarea name="namel" id="1" cols="30" rows="10"></textarea>
         
      </div>  
        <input type="submit" value="Отправить">
