загрузила файл с img
нужно посмотреть ошибку с картинкой

--- a/src/проект.html
+++ b/src/проект.html
@@ -48,7 +48,7 @@
     <br>
     <div class="skills">
            <h2>ЧТО Я УМЕЮ</h2>
-           <div class="skills_item">
+           <div class="skills_item1">
            <img src="img/laptop.png" alt="">
             <h4>Веб-дизайн</h4>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
@@ -76,16 +76,25 @@
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor</p>
         <img src="img/%D0%BA%D0%B5%D0%B9%D1%81%D1%8B.png" alt="">
         <span>
-            <h3>CLIENT</h3>
+           <div class="h2_1">
+            <h3>CLIENT:</h3>
             <p>Какая-то компания</p>
-            <h3>WEBSITE</h3>
+            </div>
+           <div class="h2_2">
+            <h3>WEBSITE:</h3>
             <a href="">http://www.somedomain.com</a>
+            </div>
         </span>
         <span>
+           <div class="h2_3">
             <h3>Название проекта</h3>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus.</p>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis 
+            vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus.</p>
+            </div>
         </span>
+        <div class="h2_4">
         <input type="submit" value="VISIT LIVE SITE">
+        </div>
     </div>
     <br>
     <div>
